manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv
  namespace: datalab
spec:
  selector:
    matchLabels:
      name: cv
  template:
    metadata:
      labels:
        name: cv
    spec:
      containers:
      - name: cv
        image: ghcr.io/tom333/cv-static:latest
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
