manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv
  namespace: datalab
  labels:
    name: cv
spec:
  type: ClusterIP
  selector:
    name: cv
  ports:
  - port: 80
    name: http
    targetPort: 80
    protocol: TCP
